--- a/index.html
+++ b/index.html
@@ -6,141 +6,201 @@
     <title>Emmanuel Martinez Buffa - Psicólogo | Desarrollo Personal</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
+    <!-- Navigation -->
+    <nav class="navbar">
         <div class="container">
-            <div class="logo">
-                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='45' fill='%23f4a6c1'/%3E%3Ctext x='50' y='60' font-size='40' font-weight='bold' text-anchor='middle' fill='%23333'%3EEM%3C/text%3E%3C/svg%3E" alt="Logo" class="logo-img">
-                <span>Emmanuel</span>
+            <div class="nav-content">
+                <div class="logo">
+                    <span class="logo-text">Emmanuel</span>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="#sobre-mi">Sobre Mí</a></li>
+                    <li><a href="#servicios">Servicios</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
             </div>
-            <nav class="nav">
-                <a href="#servicios">Servicios</a>
-                <a href="#sobre-mi">Sobre mí</a>
-                <a href="#contacto">Contacto</a>
-            </nav>
         </div>
-    </header>
+    </nav>
 
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h1 class="hero-title">Porque estar mejor siempre es posible</h1>
-            <p class="hero-subtitle">Psicólogo especializado en desarrollo personal y bienestar mental. Acompañamiento profesional para empresarios y personas que buscan crecer.</p>
-            <div class="hero-buttons">
-                <button class="btn btn-primary" onclick="openModal('therapy')">Agendar Sesión</button>
-                <button class="btn btn-secondary" onclick="openModal('advertising')">Publicidad & Colaboraciones</button>
+            <div class="hero-content">
+                <div class="hero-text">
+                    <h1>Porque estar mejor siempre es posible</h1>
+                    <p>Acompañamiento profesional en tu camino hacia el desarrollo personal y el bienestar emocional</p>
+                    <button class="cta-button" onclick="document.getElementById('servicios').scrollIntoView({behavior: 'smooth'})">Conoce mis servicios</button>
+                </div>
+                <div class="hero-image">
+                    <img src="https://private-us-east-1.manuscdn.com/sessionFile/UUVqWkJuXJdSTgubiMzV92/sandbox/LNRBzSINqca8mtBAUfsTlj-img-2_1771097135000_na1fn_aGFwcHktbWFuLXRoZXJhcHk.jpg" alt="Bienestar" class="hero-img">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sobre Mí -->
+    <section id="sobre-mi" class="about">
+        <div class="container">
+            <div class="about-content">
+                <div class="about-image">
+                    <div class="profile-circle">
+                        <img src="https://private-us-east-1.manuscdn.com/sessionFile/UUVqWkJuXJdSTgubiMzV92/sandbox/LNRBzSINqca8mtBAUfsTlj-img-2_1771097135000_na1fn_aGFwcHktbWFuLXRoZXJhcHk.jpg" alt="Emmanuel Martinez Buffa">
+                    </div>
+                    <h3 class="profile-name">Licenciado Emmanuel Martinez Buffa</h3>
+                </div>
+                <div class="about-text">
+                    <h2>Sobre Mí</h2>
+                    <p>Soy psicólogo licenciado por la Universidad de Buenos Aires, especializado en trastornos del neurodesarrollo y rehabilitación neurocognitiva. Mi enfoque se centra en el desarrollo personal y el bienestar emocional.</p>
+                    <p>Trabajo con un enfoque en Terapia Cognitivo-Conductual, combinando técnicas modernas con una escucha activa y empática. Cada día busco entrenarme en mis habilidades como psicólogo para mejorar la empatía, las habilidades comunicacionales, la observación clínica y la capacidad de resolver problemas.</p>
+                    <p>Mi objetivo es crear un espacio seguro y confidencial donde puedas explorar tus pensamientos, emociones y comportamientos, para trabajar juntos en alcanzar tus metas de bienestar.</p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Servicios -->
-    <section id="servicios" class="servicios">
+    <section id="servicios" class="services">
         <div class="container">
             <h2>Mis Servicios</h2>
-            <div class="servicios-grid">
-                <div class="servicio-card">
-                    <h3>Sesiones de Terapia</h3>
-                    <p>Sesiones de 45 minutos enfocadas en desarrollo personal, manejo de ansiedad y depresión leve.</p>
-                    <p class="precio">USD $40 por sesión</p>
+            <div class="services-grid">
+                <!-- Terapia Individual -->
+                <div class="service-card">
+                    <div class="service-image">
+                        <img src="https://private-us-east-1.manuscdn.com/sessionFile/UUVqWkJuXJdSTgubiMzV92/sandbox/LNRBzSINqca8mtBAUfsTlj-img-4_1771097140000_na1fn_d29tYW4tbWVkaXRhdGlvbi1wZWFjZQ.jpg" alt="Terapia Individual">
+                    </div>
+                    <h3>Terapia Individual</h3>
+                    <p>Sesiones de 45 minutos de acompañamiento psicológico personalizado para trabajar en tu bienestar emocional, desarrollo personal y resolución de conflictos.</p>
+                    <button class="reserve-button" onclick="openModal('terapia')">Reservar Sesión</button>
                 </div>
-                <div class="servicio-card">
-                    <h3>Publicidad & Colaboraciones</h3>
-                    <p>Oportunidades de colaboración pagada con empresas y profesionales de salud mental.</p>
-                    <p class="precio">Presupuesto personalizado</p>
+
+                <!-- Terapia Cognitivo-Conductual -->
+                <div class="service-card">
+                    <div class="service-image">
+                        <img src="https://private-us-east-1.manuscdn.com/sessionFile/UUVqWkJuXJdSTgubiMzV92/sandbox/LNRBzSINqca8mtBAUfsTlj-img-1_1771097135000_na1fn_aGFwcHktd29tYW4td2VsbG5lc3M.jpg" alt="TCC">
+                    </div>
+                    <h3>Terapia Cognitivo-Conductual</h3>
+                    <p>Enfoque especializado para trabajar con ansiedad, depresión leve y otros desafíos emocionales. Técnicas prácticas para cambiar patrones de pensamiento y comportamiento.</p>
+                    <button class="reserve-button" onclick="openModal('terapia')">Reservar Sesión</button>
+                </div>
+
+                <!-- Publicidad y Colaboraciones -->
+                <div class="service-card">
+                    <div class="service-image">
+                        <img src="https://private-us-east-1.manuscdn.com/sessionFile/UUVqWkJuXJdSTgubiMzV92/sandbox/LNRBzSINqca8mtBAUfsTlj-img-3_1771097144000_na1fn_ZGl2ZXJzZS1oYXBweS1wZW9wbGU.jpg" alt="Colaboraciones">
+                    </div>
+                    <h3>Publicidad y Colaboraciones</h3>
+                    <p>¿Ofreces servicios de salud mental? Colaboremos para llegar a más personas. Aprovecha mi audiencia para promocionar tu marca o servicio.</p>
+                    <button class="reserve-button" onclick="openModal('publicidad')">Solicitar Colaboración</button>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Sobre mí -->
-    <section id="sobre-mi" class="sobre-mi">
+    <!-- Testimonios -->
+    <section class="testimonials">
         <div class="container">
-            <h2>Sobre mí</h2>
-            <div class="bio-content">
-                <p>Soy <strong>Psicólogo Licenciado</strong> por la Universidad de Buenos Aires, especializado en desarrollo personal y bienestar mental.</p>
-                <p>Mi enfoque se centra en acompañar a empresarios y personas que buscan mejorar su calidad de vida y desarrollarse personalmente. Utilizo técnicas de Terapia Cognitivo Conductual (TCC) para trabajar con ansiedad y depresión leve.</p>
-                <p>Creo que <strong>estar mejor siempre es posible</strong>, y mi objetivo es ayudarte a alcanzar tu mejor versión.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contacto -->
-    <section id="contacto" class="contacto">
-        <div class="container">
-            <h2>Contacto</h2>
-            <p>¿Listo para dar el primer paso? Contáctame para agendar tu sesión o explorar oportunidades de colaboración.</p>
-            <div class="contacto-buttons">
-                <a href="https://wa.me/5491123456789" class="btn btn-primary" target="_blank">WhatsApp</a>
-                <a href="https://instagram.com/martinezbuffaok" class="btn btn-secondary" target="_blank">Instagram</a>
+            <h2>Lo que mis pacientes dicen</h2>
+            <div class="testimonials-grid">
+                <div class="testimonial-card">
+                    <p>"Emmanuel me ayudó a entender mis patrones de pensamiento y a desarrollar herramientas prácticas para manejar la ansiedad. Muy recomendado."</p>
+                    <span class="testimonial-author">- Paciente satisfecho</span>
+                </div>
+                <div class="testimonial-card">
+                    <p>"Un profesional empático y dedicado. Las sesiones me han ayudado a crecer como persona y a mejorar mis relaciones."</p>
+                    <span class="testimonial-author">- Paciente satisfecho</span>
+                </div>
+                <div class="testimonial-card">
+                    <p>"Encontré en Emmanuel el apoyo que necesitaba para trabajar en mi desarrollo personal. Altamente profesional y comprometido."</p>
+                    <span class="testimonial-author">- Paciente satisfecho</span>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Modal de Reserva -->
-    <div id="bookingModal" class="modal">
+    <div id="reservaModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
-            <h2 id="modalTitle">Agendar Sesión</h2>
-            <form id="bookingForm" onsubmit="handleSubmit(event)">
+            <h2 id="modalTitle">Reservar Sesión</h2>
+            <form id="reservaForm" onsubmit="handleSubmit(event)">
+                <input type="hidden" id="tipoReserva" name="tipoReserva" value="">
+                
                 <div class="form-group">
-                    <label for="name">Nombre completo</label>
-                    <input type="text" id="name" name="name" required>
+                    <label for="nombre">Nombre Completo *</label>
+                    <input type="text" id="nombre" name="nombre" required>
                 </div>
+
                 <div class="form-group">
-                    <label for="email">Email</label>
+                    <label for="email">Email *</label>
                     <input type="email" id="email" name="email" required>
                 </div>
+
                 <div class="form-group">
-                    <label for="phone">Teléfono / WhatsApp</label>
-                    <input type="tel" id="phone" name="phone" required>
+                    <label for="telefono">Teléfono *</label>
+                    <input type="tel" id="telefono" name="telefono" required>
                 </div>
-                <div id="therapyFields">
+
+                <div class="form-group">
+                    <label for="motivo">Motivo de Consulta *</label>
+                    <textarea id="motivo" name="motivo" rows="4" required></textarea>
+                </div>
+
+                <div id="terapiaFields" style="display: none;">
                     <div class="form-group">
-                        <label for="date">Fecha</label>
-                        <input type="date" id="date" name="date">
+                        <label for="fecha">Fecha Preferida *</label>
+                        <input type="date" id="fecha" name="fecha">
                     </div>
+
                     <div class="form-group">
-                        <label for="time">Hora (Viernes 9-19hs)</label>
-                        <select id="time" name="time">
+                        <label for="hora">Hora Preferida (Viernes 9-19hs) *</label>
+                        <select id="hora" name="hora">
                             <option value="">Selecciona una hora</option>
-                            <option value="09:00">09:00</option>
-                            <option value="10:00">10:00</option>
-                            <option value="11:00">11:00</option>
-                            <option value="12:00">12:00</option>
-                            <option value="13:00">13:00</option>
-                            <option value="14:00">14:00</option>
-                            <option value="15:00">15:00</option>
-                            <option value="16:00">16:00</option>
-                            <option value="17:00">17:00</option>
-                            <option value="18:00">18:00</option>
+                            <option value="09:00">09:00 - 10:00</option>
+                            <option value="10:00">10:00 - 11:00</option>
+                            <option value="11:00">11:00 - 12:00</option>
+                            <option value="12:00">12:00 - 13:00</option>
+                            <option value="13:00">13:00 - 14:00</option>
+                            <option value="14:00">14:00 - 15:00</option>
+                            <option value="15:00">15:00 - 16:00</option>
+                            <option value="16:00">16:00 - 17:00</option>
+                            <option value="17:00">17:00 - 18:00</option>
+                            <option value="18:00">18:00 - 19:00</option>
                         </select>
                     </div>
+                </div>
+
+                <div id="publicidadFields" style="display: none;">
                     <div class="form-group">
-                        <label for="reason">Motivo de consulta</label>
-                        <textarea id="reason" name="reason" rows="3"></textarea>
+                        <label for="empresa">Nombre de la Empresa/Marca *</label>
+                        <input type="text" id="empresa" name="empresa">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="usuario">Usuario de Instagram *</label>
+                        <input type="text" id="usuario" name="usuario" placeholder="@tuusuario">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="descripcion">Descripción del Servicio *</label>
+                        <textarea id="descripcion" name="descripcion" rows="4" placeholder="Cuéntame sobre tu servicio o marca"></textarea>
                     </div>
                 </div>
-                <div id="advertisingFields" style="display:none;">
-                    <div class="form-group">
-                        <label for="instagramUser">Usuario de Instagram</label>
-                        <input type="text" id="instagramUser" name="instagramUser">
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Detalles de la colaboración</label>
-                        <textarea id="message" name="message" rows="3"></textarea>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary" style="width: 100%;">Enviar</button>
+
+                <button type="submit" class="submit-button">Enviar Solicitud</button>
             </form>
         </div>
     </div>
 
+    <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2026 Emmanuel Martinez Buffa. Todos los derechos reservados.</p>
+        <div class="container">
+            <p>&copy; 2026 Emmanuel Martinez Buffa - Psicólogo. Todos los derechos reservados.</p>
+            <p>Para consultas: <a href="https://wa.me/5491234567890">WhatsApp</a> | <a href="https://instagram.com/martinezbuffaok">Instagram</a></p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
