Actualizar con imagen del cerebro, sin testimonios, imágenes de Unsplash funcionales

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button class="cta-button" onclick="document.getElementById('servicios').scrollIntoView({behavior: 'smooth'})">Conoce mis servicios</button>
                 </div>
                 <div class="hero-image">
-                    <img src="https://private-us-east-1.manuscdn.com/sessionFile/UUVqWkJuXJdSTgubiMzV92/sandbox/LNRBzSINqca8mtBAUfsTlj-img-2_1771097135000_na1fn_aGFwcHktbWFuLXRoZXJhcHk.jpg" alt="Bienestar" class="hero-img">
+                    <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663354130404/HsTSouVGtJDYnHwP.jpg" alt="Salud Mental" class="hero-img">
                 </div>
             </div>
         </div>
@@ -48,7 +48,7 @@
             <div class="about-content">
                 <div class="about-image">
                     <div class="profile-circle">
-                        <img src="https://private-us-east-1.manuscdn.com/sessionFile/UUVqWkJuXJdSTgubiMzV92/sandbox/LNRBzSINqca8mtBAUfsTlj-img-2_1771097135000_na1fn_aGFwcHktbWFuLXRoZXJhcHk.jpg" alt="Emmanuel Martinez Buffa">
+                        <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663354130404/HsTSouVGtJDYnHwP.jpg" alt="Emmanuel Martinez Buffa">
                     </div>
                     <h3 class="profile-name">Licenciado Emmanuel Martinez Buffa</h3>
                 </div>
@@ -70,7 +70,7 @@
                 <!-- Terapia Individual -->
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="https://private-us-east-1.manuscdn.com/sessionFile/UUVqWkJuXJdSTgubiMzV92/sandbox/LNRBzSINqca8mtBAUfsTlj-img-4_1771097140000_na1fn_d29tYW4tbWVkaXRhdGlvbi1wZWFjZQ.jpg" alt="Terapia Individual">
+                        <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a5?w=500&h=300&fit=crop" alt="Terapia Individual">
                     </div>
                     <h3>Terapia Individual</h3>
                     <p>Sesiones de 45 minutos de acompañamiento psicológico personalizado para trabajar en tu bienestar emocional, desarrollo personal y resolución de conflictos.</p>
@@ -80,7 +80,7 @@
                 <!-- Terapia Cognitivo-Conductual -->
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="https://private-us-east-1.manuscdn.com/sessionFile/UUVqWkJuXJdSTgubiMzV92/sandbox/LNRBzSINqca8mtBAUfsTlj-img-1_1771097135000_na1fn_aGFwcHktd29tYW4td2VsbG5lc3M.jpg" alt="TCC">
+                        <img src="https://images.unsplash.com/photo-1516321318423-f06f70504504?w=500&h=300&fit=crop" alt="TCC">
                     </div>
                     <h3>Terapia Cognitivo-Conductual</h3>
                     <p>Enfoque especializado para trabajar con ansiedad, depresión leve y otros desafíos emocionales. Técnicas prácticas para cambiar patrones de pensamiento y comportamiento.</p>
@@ -90,32 +90,11 @@
                 <!-- Publicidad y Colaboraciones -->
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="https://private-us-east-1.manuscdn.com/sessionFile/UUVqWkJuXJdSTgubiMzV92/sandbox/LNRBzSINqca8mtBAUfsTlj-img-3_1771097144000_na1fn_ZGl2ZXJzZS1oYXBweS1wZW9wbGU.jpg" alt="Colaboraciones">
+                        <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?w=500&h=300&fit=crop" alt="Colaboraciones">
                     </div>
                     <h3>Publicidad y Colaboraciones</h3>
                     <p>¿Ofreces servicios de salud mental? Colaboremos para llegar a más personas. Aprovecha mi audiencia para promocionar tu marca o servicio.</p>
                     <button class="reserve-button" onclick="openModal('publicidad')">Solicitar Colaboración</button>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Testimonios -->
-    <section class="testimonials">
-        <div class="container">
-            <h2>Lo que mis pacientes dicen</h2>
-            <div class="testimonials-grid">
-                <div class="testimonial-card">
-                    <p>"Emmanuel me ayudó a entender mis patrones de pensamiento y a desarrollar herramientas prácticas para manejar la ansiedad. Muy recomendado."</p>
-                    <span class="testimonial-author">- Paciente satisfecho</span>
-                </div>
-                <div class="testimonial-card">
-                    <p>"Un profesional empático y dedicado. Las sesiones me han ayudado a crecer como persona y a mejorar mis relaciones."</p>
-                    <span class="testimonial-author">- Paciente satisfecho</span>
-                </div>
-                <div class="testimonial-card">
-                    <p>"Encontré en Emmanuel el apoyo que necesitaba para trabajar en mi desarrollo personal. Altamente profesional y comprometido."</p>
-                    <span class="testimonial-author">- Paciente satisfecho</span>
                 </div>
             </div>
         </div>
