--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="nav-content">
                 <div class="logo">
-                    <span class="logo-text">Emmanuel</span>
+                    <span class="logo-text">Emmanuel<br>Martinez<br>Buffa</span>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#sobre-mi">Sobre Mí</a></li>
@@ -70,7 +70,7 @@
                 <!-- Terapia Individual -->
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a5?w=500&h=300&fit=crop" alt="Terapia Individual">
+                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=500&h=300&fit=crop" alt="Terapia Individual">
                     </div>
                     <h3>Terapia Individual</h3>
                     <p>Sesiones de 45 minutos de acompañamiento psicológico personalizado para trabajar en tu bienestar emocional, desarrollo personal y resolución de conflictos.</p>
@@ -80,7 +80,7 @@
                 <!-- Terapia Cognitivo-Conductual -->
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="https://images.unsplash.com/photo-1516321318423-f06f70504504?w=500&h=300&fit=crop" alt="TCC">
+                        <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=500&h=300&fit=crop" alt="TCC">
                     </div>
                     <h3>Terapia Cognitivo-Conductual</h3>
                     <p>Enfoque especializado para trabajar con ansiedad, depresión leve y otros desafíos emocionales. Técnicas prácticas para cambiar patrones de pensamiento y comportamiento.</p>
