Reemplazar imagen hero con foto de Emmanuel en podcast

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button class="cta-button" onclick="document.getElementById('servicios').scrollIntoView({behavior: 'smooth'})">Conoce mis servicios</button>
                 </div>
                 <div class="hero-image">
-                    <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663354130404/HsTSouVGtJDYnHwP.jpg" alt="Salud Mental" class="hero-img">
+                    <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663354130404/IdaeoJjvKeSMQnpI.webp" alt="Emmanuel Martinez Buffa" class="hero-img">
                 </div>
             </div>
         </div>
