Agregar sección 'Por Qué Elegirme' con contenido profesional y actualizar WhatsApp

--- a/index.html
+++ b/index.html
@@ -62,6 +62,31 @@
         </div>
     </section>
 
+    <!-- Por Qué Elegirme -->
+    <section class="why-choose">
+        <div class="container">
+            <h2>Por Qué Elegirme</h2>
+            <div class="why-items">
+                <div class="why-item">
+                    <h3>Enfoque basado en evidencia y profundidad humana</h3>
+                    <p>Trabajo desde una psicología actualizada, con base en teorías cognitivas, humanistas y neurocientíficas. No me quedo en frases motivacionales: integro ciencia y experiencia para generar cambios reales y sostenibles.</p>
+                </div>
+                <div class="why-item">
+                    <h3>Acompañamiento estratégico al crecimiento personal</h3>
+                    <p>No se trata de "arreglar" algo roto, sino de desarrollar recursos internos, fortalecer la identidad y construir una versión más consciente y coherente de vos mismo.</p>
+                </div>
+                <div class="why-item">
+                    <h3>Herramientas prácticas para la vida cotidiana</h3>
+                    <p>Cada proceso terapéutico se traduce en estrategias concretas: regulación emocional, manejo del estrés, toma de decisiones, hábitos saludables y claridad en objetivos.</p>
+                </div>
+                <div class="why-item">
+                    <h3>Visión integral del bienestar</h3>
+                    <p>Entiendo el desarrollo personal como un equilibrio entre mente, emociones, vínculos y propósito. Trabajo para que el cambio no sea sólo interno, sino también funcional en tu vida real.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Servicios -->
     <section id="servicios" class="services">
         <div class="container">
@@ -178,7 +203,7 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2026 Emmanuel Martinez Buffa - Psicólogo. Todos los derechos reservados.</p>
-            <p>Para consultas: <a href="https://wa.me/5491234567890">WhatsApp</a> | <a href="https://instagram.com/martinezbuffaok">Instagram</a></p>
+            <p>Para consultas: <a href="https://wa.me/541137796812">WhatsApp</a> | <a href="https://instagram.com/martinezbuffaok">Instagram</a></p>
         </div>
     </footer>
 
