Agregar funcionalidad de contacto con WhatsApp e Instagram

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2026 Emmanuel Martinez Buffa - Psicólogo. Todos los derechos reservados.</p>
-            <p>Para consultas: <a href="https://wa.me/541137796812">WhatsApp</a> | <a href="https://instagram.com/martinezbuffaok">Instagram</a></p>
+            <p><button onclick="showContacto()" style="background: #f4a6c1; color: white; border: none; padding: 0.8rem 1.5rem; border-radius: 50px; cursor: pointer; font-weight: 600; transition: all 0.3s; font-size: 0.95rem;" onmouseover="this.style.background='#e88ba8'" onmouseout="this.style.background='#f4a6c1'">Contactame</button></p>
         </div>
     </footer>
 
