Agregar iconos SVG a los botones de contacto y hacer funcional el link Contacto del menú

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul class="nav-links">
                     <li><a href="#sobre-mi">Sobre Mí</a></li>
                     <li><a href="#servicios">Servicios</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="javascript:void(0);" onclick="showContacto()">Contacto</a></li>
                 </ul>
             </div>
         </div>
