Agregar imagen del cerebro transparente entre el nombre y el menú

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <div class="logo">
                     <span class="logo-text">Emmanuel<br>Martinez<br>Buffa</span>
                 </div>
+                <div class="logo-brain">
+                    <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663354130404/IdTfQsGbgSiBwZyD.png" alt="Salud Mental">
+                </div>
                 <ul class="nav-links">
                     <li><a href="#sobre-mi">Sobre Mí</a></li>
                     <li><a href="#servicios">Servicios</a></li>
